src/smart-scrum-poker/templates/app-frontend/app-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssp-frontend
  labels:
    app: ssp-frontend-label
spec:
  replicas: 1
  selector:
    matchLabels:
      service: ssp-frontend
  template:
    metadata:
      labels:
        app: ssp-frontend-label
        service: ssp-frontend
    spec:
      containers:
        - name: ssp-frontend
          image: placeholder:placeholder
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 200m
              memory: 400Mi
