src/smart-scrum-poker/templates/app-frontend/app-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ssp-frontend
  labels:
    app: ssp-frontend-label
    service: ssp-frontend-service
spec:
  type: NodePort
  selector:
    app: ssp-frontend-label
    service: ssp-frontend
  ports:
    - name: "http"
      protocol: TCP
      port: 48010
      targetPort: 80
